<resources>
    <string name="app_name">Thn2h</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="Password">Password</string>
    <string name="email">E-Mail</string>
    <string name="signin">Sign In</string>
    <string name="login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_group">Groups</string>
    <string name="title_contacts">Contacts</string>
    <string name="txtViewDoNotHaveAccount">Don\'t have an account?</string>
    <string name="signinwith">Sign in with</string>
    <string name="txtViewAlreadyRegistered">Have an account? Login here</string>
    <string name="logout">Logout</string>
    <string name="typemobilenumber">Type mobile number</string>
    <string name="messagetext">Type your message</string>
    <string name="groupname">Enter Group Name</string>
    <string name="members">Members :</string>
    <string name="time">Time</string>
    <string name="send_via">Send Via</string>
    <string name="now">Now</string>
    <string name="custom">Custom</string>
    <string name="date">Date</string>
    <string name="time2">Time2</string>
    <string name="title_activity_choose_reciver">ChooseReciverActivity</string>
    <string name="tab_text_1">Groups</string>
    <string name="tab_text_2">Contacts</string>
    <string name="title_pending">Pending</string>
    <string name="title_completed">Completed</string>
    <string name="tvinitnumber">010</string>
    <string name="choosesendingway">Choose sending way</string>
    <string name="whatsthenSMS">WhatsApp to all then SMS to others</string>
    <string name="smstoall">SMS to all</string>
    <string name="smsthenwhats">SMS to all with same carier and whatsapp to others</string>
</resources>
