<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroung"
    tools:context=".OptionActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:fontFamily="@font/tcb"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/choosesendingway"
        android:textColor="@color/background_offwhite"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/rbWhatsthenSMS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/background_offwhite"
            android:textSize="17sp"
            android:layout_margin="5dp"
            android:fontFamily="@font/tcb"
            android:text="@string/whatsthenSMS" />

        <RadioButton
            android:id="@+id/rbSMS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/background_offwhite"
            android:textSize="17sp"
            android:layout_margin="5dp"
            android:fontFamily="@font/tcb"
            android:text="@string/smstoall" />

        <RadioButton
            android:id="@+id/rbSMSthenWhats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/smsthenwhats"
            android:textColor="@color/background_offwhite"
            android:textSize="17sp"
            android:layout_margin="5dp"
            android:fontFamily="@font/tcb"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/rbcustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/background_offwhite"
            android:textSize="17sp"
            android:layout_margin="5dp"
            android:fontFamily="@font/tcb"
            android:text="@string/custom" />

    </RadioGroup>

    <ImageButton
        android:id="@+id/imageBtnSendingOptionDone"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btnexittext"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup"
        app:srcCompat="@drawable/doneimage" />


</androidx.constraintlayout.widget.ConstraintLayout>