<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroung"
    tools:context=".AddMessage.AddMessageActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etinitnumber"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/btnexittext"
        android:hint="@string/tvinitnumber"
        android:inputType="number"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/background_offwhite"
        android:textColorHighlight="@color/background_offwhite"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/etPersonNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etPersonNumber" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPersonNumber"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btnexittext"
        android:hint="@string/typemobilenumber"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textColor="@color/background_offwhite"
        android:textColorHighlight="@color/background_offwhite"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etmessage"
        app:layout_constraintEnd_toStartOf="@+id/ivopenContacts"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/etmessage"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etmessage"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btnexittext"
        android:gravity="center"
        android:hint="@string/messagetext"
        android:inputType="textMultiLine"
        android:padding="3dp"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:textColor="@color/background_offwhite"
        android:textColorHighlight="@color/background_offwhite"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPersonNumber" />

    <ImageButton
        android:id="@+id/imageBtnAttach_AddMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="@+id/etmessage"
        app:layout_constraintTop_toTopOf="@+id/etmessage"
        app:srcCompat="@drawable/ic_attachment" />


    <ImageView
        android:id="@+id/ivopenContacts"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/etPersonNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etPersonNumber"
        app:layout_constraintTop_toTopOf="@+id/etPersonNumber"
        app:srcCompat="@drawable/ic_account_box_black_24dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/century"
        android:text="@string/time"
        android:textColor="@color/background_offwhite"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etmessage" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/century"
        android:text="@string/send_via"
        android:textColor="@color/background_offwhite"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_AddMessage" />

    <RadioGroup
        android:id="@+id/checkerButtonVia_AddMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView10">

        <RadioButton
            android:id="@+id/radioBtnWhatsApp_AddMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_whatsapp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp" />

        <RadioButton
            android:id="@+id/radioBtnSMS_AddMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_sms"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayout_AddMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkerButtonTime_AddMessage">

        <TextView
            android:id="@+id/txtDate_AddMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/background_offwhite"
            android:textSize="20sp"
            tools:text="@string/date" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="-"
            android:textColor="@color/background_offwhite"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtTime_AddMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/background_offwhite"
            android:textSize="20sp"
            tools:text="@string/time2" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/checkerButtonTime_AddMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"

        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8">

        <RadioButton
            android:id="@+id/radioBtnNow_AddMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="2"
            android:focusable="auto"
            android:fontFamily="@font/tcb"
            android:text="@string/now"
            android:textColor="@color/background_offwhite"
            android:textColorHint="@color/colorAccent"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioBtnCustom_AddMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/tcb"
            android:text="@string/custom"
            android:textColor="@color/background_offwhite"
            android:textColorHint="@color/colorAccent"
            android:textSize="20sp" />


    </RadioGroup>


    <ImageButton
        android:id="@+id/imageBtnSend_AddMessage"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btnexittext"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"

        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkerButtonTime_AddMessage"
        app:srcCompat="@drawable/send" />


</androidx.constraintlayout.widget.ConstraintLayout>